{
    "name": "PlayerControls",
    "maps": [
        {
            "name": "Player",
            "id": "78322a76-e1ff-495a-879d-e22a585d0900",
            "actions": [
                {
                    "name": "Move",
                    "type": "Value",
                    "id": "580bc643-a7c1-423b-9b49-3784ac03999c",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Shoot",
                    "type": "Value",
                    "id": "94ae986f-21a7-4283-b5d5-ac15ec566522",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "StartButton",
                    "type": "Button",
                    "id": "24d27321-1224-4020-ac14-6a7baac4bb0e",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "BulletFire",
                    "type": "Value",
                    "id": "5eebaa34-8f2a-4a4f-b372-c99e21726321",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "fcab4253-ca9a-494c-b48e-a7dd059a865c",
                    "path": "<Gamepad>/leftStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "8a64533c-aea4-4fc5-b81a-1476960f5e06",
                    "path": "<XInputController>/buttonSouth",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Shoot",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "1700d660-f0ae-4652-8dea-4ae85869349f",
                    "path": "<Gamepad>/start",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "StartButton",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "ff10763f-a900-40b5-97ca-efae2145f01f",
                    "path": "<Gamepad>/rightStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "BulletFire",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}